# telugu-stopwords

./: .gitignore  index.html  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
telugu_stopwords/: telugu_stopwords.py
